Decreased event-name text size to prevent overflow

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -45,7 +45,7 @@
 }
 
 #event-name{
-    font-size: 50px;
+    font-size: 55px;
     font-weight: normal;
     margin: 1rem auto auto auto;
 }
@@ -75,4 +75,10 @@
     #myVideo{
         display: none;
     }
+}
+
+@media screen and (max-width: 365px){
+#event-name{
+    font-size: 50px;
+}
 }
